# hope-smart-import

./: .gitignore  .mypy.ini  CHANGES  README.md  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: test.yml
docs/src/: .pages  contributing.md  install.md  usage.md
src/hope_smart_import/: admin.py  apps.py  models.py  readers.py  shortcuts.py  types.pyi  utils.py
src/hope_smart_import/migrations/: 0001_initial.py
tests/: .coveragerc  conftest.py  test_csv.py  test_rdi.py  test_readers.py  test_sample_code.py  test_validate.py  test_xls.py
tests/data/: missing_master.xlsx
tests/demoapp/demo/: backends.py  factories.py  models.py  settings.py  tasks.py
tests/demoapp/demo/migrations/: 0001_initial.py
