[project]
name = "hope-smart-import"
version = "0.5.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "django-admin-extra-buttons",
  "hope-flex-fields",
  "openpyxl",
]

optional-dependencies.docs = [
  "mkdocs",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-material",
  "mkdocstrings-python",
]

[tool.uv]
dev-dependencies = [
  "bump2version",
  "django-webtest",
  "django",
  "factory-boy",
  "ruff",
  "ipython",
  "mypy",
  "pre-commit",
  "pdbpp",
  "pytest-cov",
  "pytest-django",
  "pytest-echo",
  "pytest",
  "tox",
]
